app/static/css/style.css
body,
html {
  height: 100%;
}

:root {
  --content-height: calc(100vh - 57px);
  --green: #198754;
  --teal: #20c997;
  --green-40: #24c278;
  --green-50: #20ac6b;
}

main {
  scrollbar-width: thin;
  padding: 1em 1.5em !important;
}

#content {
  height: var(--content-height);
  overflow: auto;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

/* custom styling */

.fa-check {
  color: var(--bs-success);
}

.fa-xmark {
  color: var(--bs-danger);
}

.btn:focus {
  outline: none;
  box-shadow: none;
}

.p-normal {
  padding: 1em 1.5em !important;
}

.fw-500 {
  font-weight: 500;
}

.no-border-top {
  border-top: 0px solid currentColor !important;
}

.bg-grassland {
  background-color: olivedrab !important;
}

.bg-cropland {
  background-color: peru !important;
}

.bg-custom {
  background-color: cadetblue !important;
}

.bg-green {
  background-color: var(--green) !important;
}

/* table styling */
.table-action {
  white-space: nowrap;
  width: 1em;
  padding: 0 !important;
}

.table > tbody {
  border-top: 0px solid currentColor !important;
}

/* .table>:not(:first-child) {
  border-top: 1px solid var(--bs-gray-400);
} */

/* edit button hover  */
.btn-edit {
  color: var(--bs-primary);
  display: none;
  padding: 0 !important;
}

button:hover .btn-edit {
  display: inline-block;
}

tr:hover .btn-edit {
  display: inline-block;
}

/* accordion styling */
.accordion-button:not(.collapsed) {
  color: inherit;
  background-color: inherit;
  box-shadow: none;
}

.accordion-button:not(.collapsed)::after {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
}

.accordion-button:focus {
  border-color: inherit;
  box-shadow: none;
}

/* field-nav styling */

#field-nav .nav-link.active {
  background-color: var(--green-40);
}

#field-nav .nav-link:hover:not(.active) {
  background-color: var(--green-50);
}

/* toast styling */

.toast {
  z-index: 11;
}

.toast .progress {
  height: 2px;
}

/* navbar styling */

.navbar {
  background-color: var(--bs-green);
  border-bottom: 1px solid var(--bs-dark);
}

.nav-masthead .nav-link {
  padding: 0.1rem 0;
  font-weight: 500;
  color: #fff !important;
  background-color: transparent;
  border-bottom: 0.1rem solid transparent;
}

.nav-masthead .nav-link:hover.nav-link:not(.active):not(.no-highlight),
.nav-masthead .nav-link:focus.nav-link:not(.active):not(.no-highlight) {
  border-bottom-color: rgba(255, 255, 255, 0.25);
}

.nav-masthead .nav-link + .nav-link {
  margin-left: 1rem;
}

.nav-masthead .nav-link .badge {
  padding: 0.2rem;
  bottom: 40%;
}

.nav-masthead .active {
  border-bottom-color: #fff;
  border-bottom-width: 0.15rem;
}

#resetToast {
  border: 0 solid transparent;
}

#resetToast:hover,
#resetToast:focus {
  border-bottom: 0.1rem solid rgba(255, 255, 255, 0.25);
}

/* sidebar styling */

#sidebar {
  background-color: transparent;
  /* border-right: 1px solid var(--bs-dark); */
  height: var(--content-height);
  overflow: auto;
  margin-right: 0;
  scrollbar-width: thin;
  scrollbar-base-color: var(--bs-dark);
  scrollbar-track-color: var(--bs-gray-600);
}

#sidebarNav {
  border-right: 1px solid var(--bs-dark);
}

.sidebar-item {
  font-size: 0.8rem;
  border-color: var(--bs-gray-800);
}

.sidebar-item.active {
  background-color: var(--bs-primary) !important;
  border-color: var(--bs-white) !important;
}

.sidebar-item:hover {
  border-width: 1px 0;
  border-style: solid;
  /* border-color: var(--bs-gray-500); */
  border-color: white;
  margin: -1px 0 0;
}

/* scrollbar styling */

#sidebar::-webkit-scrollbar {
  width: 5px;
}

#sidebar::-webkit-scrollbar-track {
  background-color: #777;
}

#sidebar::-webkit-scrollbar-thumb {
  background: var(--bs-gray-500);
  border-radius: 10px;
}

#sidebar::-webkit-scrollbar-thumb:hover {
  background: var(--bs-green);
}

::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

::-webkit-scrollbar-thumb {
  background: #bbb;
  border-radius: 20px;
}

::-webkit-scrollbar-thumb:hover {
  background: var(--bs-green);
}

/* media queries */

@media (max-width: 992px) {
  #main {
    padding: 0.5em;
  }
  ::-webkit-scrollbar {
    width: 5px;
    height: 5px;
  }
}

